# OpenSteamClient

./: .editorconfig  .gitmodules  CONTRIBUTING.md  Directory.Build.props  LIBRARY_REDESIGN.md  README.md  RELEASING_TODO.md  REWRITE.md
.github/workflows/: dotnet.yaml
ChromeTestClient/: ChromeIPCClient.cs  ChromeTestClient.csproj  EHTMLCommands.cs  HTMLProtoMsg.cs  LiteHTMLHost.cs  Program.cs  README.md  SharedMemStream.cs
ChromeTestClient/Platform/: Globals.cs  IIPCImpl.cs
GameOverlayDebugTarget/: Program.cs
GameOverlayUI/: AvaloniaApp.axaml.cs  GameOverlayUI.csproj  Program.cs
MainExe/: CMakeLists.txt  MainExe.csproj  OpenSteamClient.rc
MainExe/cmake/: idesupport.cmake
MainExe/include/: exports.h  netbridge.h
MainExe/msbuild/: EnsurePathsAreAbsolute.props
MainExe/src/: bootstrapper_functions.cpp  main.cpp  netbridge.cpp
OpenSteamClient/: AvaloniaApp.axaml  AvaloniaApp.axaml.cs  Entry.cs  JsonContext.cs  OpenSteamClient.csproj  Program.cs
OpenSteamClient/Controls/: BaseWebPage.axaml.cs  HTMLSurface.axaml.cs  Translatable.cs
OpenSteamClient/Extensions/: ControlExtensions.cs
OpenSteamClient/Translation/: TranslationManager.cs
OpenSteamClient/Translations/: english.json  finnish.json
OpenSteamClient/UIImpl/: FriendsUI.cs
OpenSteamClient/ViewModels/: AvaloniaAppViewModel.cs  ConsolePageViewModel.cs  LibraryFolderViewModel.cs  LibraryPageViewModel.cs  LoginWindowViewModel.cs  MainWindowViewModel.cs  PageHeaderViewModel.cs  PickLaunchOptionDialogViewModel.cs  ProgressWindowViewModel.cs  SettingsWindowViewModel.cs
OpenSteamworks/: Logging.cs  OpenSteamworks.csproj  SteamClient.cs
OpenSteamworks.Client/: Client.cs  JsonContext.cs  OpenSteamworks.Client.csproj
OpenSteamworks.Client/Apps/: AppBase.cs  AppIdentifier.cs  AppsManager.cs  CloudConfigStore.cs  ShortcutApp.cs  SourcemodApp.cs  SteamApp.cs
OpenSteamworks.Client/CommonEventArgs/: EResultEventArgs.cs
OpenSteamworks.Client/Config/: AdvancedConfig.cs  BootstrapperState.cs  ConfigJsonContext.cs  ConfigManager.cs  GlobalSettings.cs  IConfigFile.cs  LibrarySettings.cs  LoginUsers.cs  NotificationSettings.cs  UserSettings.cs
OpenSteamworks.Client/DI/: Container.cs  LifetimeManager.cs  OverridingContainer.cs
OpenSteamworks.Client/Experimental/: TransportManager.cs
OpenSteamworks.Client/Friends/: FriendsManager.cs  IFriendsUI.cs
OpenSteamworks.Client/Login/: LoginManager.cs  LoginPoll.cs  LoginUser.cs
OpenSteamworks.Client/Managers/: InstallManager.cs  ShaderManager.cs
OpenSteamworks.Client/Notifications/: INotificationUI.cs  NotificationManager.cs
OpenSteamworks.Client/Startup/: Bootstrapper.cs  SteamHTML.cs  SteamService.cs
OpenSteamworks.Client/Utils/: ExtendedProgress.cs  Logger.cs  (+2 more)
OpenSteamworks.Data/: OpenSteamworks.Data.csproj  typedefs.typedef
OpenSteamworks.DataSourceGen/: StructGenerator.cs
OpenSteamworks.Messaging/: ProtoMsg.cs  SharedConnection.cs
OpenSteamworks.SourceGen/: CallbackMetadataSourceGenerator.cs  NativeClassSourceGenerator.cs
dumped_data/: IClientControllerSerializedMap.json  IClientTimelineMap.json  IClientVRMap.json  IClientVideoMap.json
(+50 files in other folders)
